--- a/wp-content/themes/retlehs-roots/css/less/campaign.less
+++ b/wp-content/themes/retlehs-roots/css/less/campaign.less
@@ -25,7 +25,6 @@
 		width: 100%;
 		margin-top: percentage(193/240);
 		.border-radius(50%);
-		behavior: url(../img/border-radius.htc);
 		border-width: 15px;
 		border-style: solid;
 		text-align: center;
@@ -67,12 +66,21 @@
 	#campaign_box {
 		a {
 			.vertical-box {
-				padding: 40px 10px;
+				padding: 65px 10px 40px	;
 			}
 
 			&:hover {
+				text-decoration: underline;
 				cursor: pointer;
 			}
+		}
+	}
+}
+
+.lt-ie9 {
+	#campaign_box {
+		a {
+			// behavior: url(../img/border-radius.htc);
 		}
 	}
 }
